--- a/HW11/HW11.csproj
+++ b/HW11/HW11.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Container\" />
+    <Folder Include="Servise\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
